--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -443,6 +443,11 @@ table {
 .clear {
   clear: both; }
 
+/*** Overflow
+************************************************/
+.overflow-x-scroll {
+  overflow-x: scroll; }
+
 /*** Table
 ************************************************/
 .white-space-nowrap {
@@ -2204,6 +2209,11 @@ a.button {
     background-image: url("../img/excel-icon.png");
     background-repeat: no-repeat;
     background-position: 5px center; }
+  .button.small.pdf, button.small.pdf {
+    padding-left: 30px;
+    background-image: url("../img/pdf-icon.png");
+    background-repeat: no-repeat;
+    background-position: 5px center; }
   .button.disabled, .button:disabled, .button[disabled], button.disabled, button:disabled, button[disabled] {
     color: rgba(0, 0, 0, 0.5);
     border-color: #d5d5d5;
@@ -3010,25 +3020,31 @@ ul.orgmenu {
 
 /*** horizontal toolbar
 ************************************************/
+.toolbarcontainerwithouthakukohde,
 div[toolbarcontainer] {
   overflow: hidden;
   height: 700px; }
+  .toolbarcontainerwithouthakukohde #toolbarcontent,
   div[toolbarcontainer] #toolbarcontent {
     background-color: #f1f6f7;
     float: left;
     height: 700px; }
+    .toolbarcontainerwithouthakukohde #toolbarcontent .toolbar-decoration,
     div[toolbarcontainer] #toolbarcontent .toolbar-decoration {
       padding: 10px;
       border-left: 1px solid #e4e4e4;
       border-bottom: 1px solid #e4e4e4;
       border-top: 1px solid #e4e4e4; }
+      .toolbarcontainerwithouthakukohde #toolbarcontent .toolbar-decoration .selectlist,
       div[toolbarcontainer] #toolbarcontent .toolbar-decoration .selectlist {
         height: 624px;
         overflow: scroll;
         margin: 0 !important;
         background-color: #fff; }
+  .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container,
   div[toolbarcontainer] #toolbartoggle-btn-container {
     float: left; }
+    .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container #toolbartoggle-btn,
     div[toolbarcontainer] #toolbartoggle-btn-container #toolbartoggle-btn {
       background-color: #f1f6f7;
       width: 32px;
@@ -3036,14 +3052,17 @@ div[toolbarcontainer] {
       position: relative;
       cursor: pointer;
       border: 1px solid #e4e4e4; }
+      .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container #toolbartoggle-btn:hover,
       div[toolbarcontainer] #toolbartoggle-btn-container #toolbartoggle-btn:hover {
         background-color: #c5e5ef; }
+      .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position,
       div[toolbarcontainer] #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position {
         position: absolute;
         left: 50%;
         top: 50%;
         height: 0;
         width: 0; }
+        .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text,
         div[toolbarcontainer] #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text {
           display: block;
           color: #149ecb;
@@ -3077,10 +3096,17 @@ div[toolbarcontainer] {
               content: '<<'; 
           }
           */ }
+          .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:before,
           div[toolbarcontainer] #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:before {
             margin-right: 10px; }
+          .toolbarcontainerwithouthakukohde #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:after,
           div[toolbarcontainer] #toolbartoggle-btn-container #toolbartoggle-btn .toolbartext-position .toggle-btn-text:after {
             margin-left: 10px; }
+
+.toolbarcontainerwithouthakukohde .toolbar-decoration {
+  border-right: 1px solid #e4e4e4; }
+.toolbarcontainerwithouthakukohde #toolbartoggle-btn-container {
+  display: none; }
 
 .togglecontent {
   height: 700px; }
